# anti-ddos

./: .gitignore  requirements.txt  setup.cfg  tox.ini  zuul.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  demand.yml
.github/workflows/: build-html-docs.yaml  build-pdf-docs.yaml
api-ref/source/: api_usage_guidelines.rst  change_history.rst  conf.py  conf.py.rej  index.rst
api-ref/source/api/: index.rst
api-ref/source/api/alarm_reminding_apis/: index.rst  querying_alarm_configuration.rst  updating_alarm_configuration.rst
api-ref/source/api/anti-ddos_apis/: configuring_the_default_protection_policy_for_newly_purchased_public_ip_addresses.rst  disabling_anti-ddos.rst  enabling_anti-ddos.rst  index.rst  querying_a_specified_api_version.rst  (+12 more)
api-ref/source/appendix/: index.rst  status_code.rst
doc/: requirements.txt
doc/source/: conf.py  index.rst
umn/source/: change_history.rst  conf.py  conf.py.rej  docutils.conf  glossary.rst  index.rst
umn/source/faqs/: how_do_i_use_anti-ddos.rst  index.rst  what_is_anti-ddos.rst  what_kinds_of_attacks_does_anti-ddos_defend_against.rst  what_services_can_anti-ddos_protect.rst  will_i_be_promptly_notified_when_an_attack_is_detected.rst
umn/source/introduction/: application_scenarios.rst  functions.rst  index.rst  project.rst  region_and_az.rst
umn/source/operation_guide/: adjusting_security_settings.rst  enabling_alarm_notification.rst  enabling_anti-ddos.rst  index.rst  setting_a_default_protection_policy_for_newly_purchased_public_ip_addresses.rst  viewing_a_monitoring_report.rst  viewing_an_interception_report.rst
(+5 files in other folders)
